[tool.poetry]
name = "solana-wallet-generator"
version = "0.1.0"
description = "Generates Solana wallets and writes to console or csv."
authors = ["HayesData"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
solders = "^0.21.0"
base58 = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
